# venticoolpy

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  gh-pages.yml  publish.yml
docs/: conf.py  index.md  index.rst  tutorials.md
docs/overview/: building.md  calculation.md  climate_data.md  index.md  results.md
docs/reference/: calculation.md  model.md
src/vctlib/: calculation.py  constant.py  internal_gains.csv  internal_gains.json  model.py  new_irradiation_SFA_Perez_newCalc.py  occ_lgt_apl.csv
src/vctlib/temp_data/: tmy_46.501_11.362_2005_2020.csv
src/venticoolpy/: __init__.py  calculation.py  constant.py  model.py  new_irradiation_SFA_Perez_newCalc.py  plot.py
tests/: conftest.py  test_basic.py  test_calculation.py  test_climate_data.py  test_model.py  test_plot.py
tests/data/: annual_data.csv  building_2.csv  isol_tot.csv  office.csv  original.csv  outdor_climate_data.csv  outdor_dry_bulb_temperature.csv  req_freq_air_change_rate.csv  results_annual_data.csv  results_req_freq_air_change_rate.csv  results_vent_mode_over_year.csv  vent_mode_over_year.csv
tests/inputs/: functions.py
tests/inputs/data/: internal_gains_ex21.csv  isol_tot.csv  isol_tot_ex21.csv  outdor_climate_data.csv  outdor_climate_data_ex21.csv  outdor_dry_bulb_temperature.csv  outdor_dry_bulb_temperature_ex21.csv  results_vent_mode_over_year_ex21.csv
tests/inputs/data/climate/: DEU_BW_Stuttgart.AP.107380_TMYx.2009-2023.epw  FI-Helsinki-Airport-29740TM2.epw  FIN_US_Helsinki.Lighthouse.029890_TMYx.2009-2023.epw  FR-Paris-Orly-Airp-71490TM2.epw  FRA_AC_Bordeaux.Merignac.AP.075100_TMYx.2009-2023.epw  IRL_EM_Birr.039650_2021_rcp85_mid-sensitivity_DSY1_MetEireann.epw
tests/snapshots/test_calculation/test_Simulation_VCdesign_Example21/: annual_data.csv  building.json  req_freq_air_change_rate.csv  simulation_december.csv  vent_mode_over_year.csv
tests/snapshots/test_calculation/test_Simulation_VCdesign_Example31/: annual_data.csv  building.json  req_freq_air_change_rate.csv  simulation_december.csv  vent_mode_over_year.csv
tests/snapshots/test_calculation/test_Simulation_VCdesign_Example41/: annual_data.csv  building.json  req_freq_air_change_rate.csv  simulation_december.csv  vent_mode_over_year.csv
tests/snapshots/test_calculation/test_snapshot_annual_data/: annual_data.json
(+118 files in other folders)
