[project]
name = "venticoolpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    
]
requires-python = ">=3.11"
dependencies = [
    "epw>=1.2.dev2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pvlib>=0.13.1",
]

[project.scripts]
venticoolpy = "venticoolpy:main"

[project.optional-dependencies]
all = ["venticoolpy[plot]"]
plot = [
    "altair>=6.0.0",
    "ipython>=9.10.0",
    "vl-convert-python>=1.9.0.post1",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-scm>=8", "setuptools>=64"]


[tool.setuptools.package-data]
venticoolpy = ["data/*.csv"]


[tool.setuptools.packages.find]
exclude = ["docs*", "test*"]
include = ["venticoolpy*"]
where = ["src"]


[dependency-groups]
dev = [
    "setuptools-scm>=9.2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
]
test = [
    "openpyxl>=3.1.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-snapshot>=0.9.0",
    "setuptools>=80.9.0",
    "tox>=4.30.3",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    'tests/*',
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/venticoolpy/_version.py"
